Improve py -> ipynb conversion

--- a/BLcourse2.3/requirements.txt
+++ b/BLcourse2.3/requirements.txt
@@ -30,4 +30,10 @@ jupyter
 # or Jupyter notebook is also fine
 ##notebook
 
+# ----------------------------------------------------------------------------
+# dev
+# ----------------------------------------------------------------------------
+
+nbstripout
+
 # vim:syn=sh
